tests/ui/derives/derives-span-Clone-enum-struct-variant.stderr
error[E0277]: the trait bound `Error: Clone` is not satisfied
  --> $DIR/derives-span-Clone-enum-struct-variant.rs:9:6
   |
LL | #[derive(Clone)]
   |          ----- in this derive macro expansion
...
LL |      x: Error
   |      ^^^^^^^^ the trait `Clone` is not implemented for `Error`
   |
help: consider annotating `Error` with `#[derive(Clone)]`
   |
LL + #[derive(Clone)]
LL | struct Error;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
